# chopsticks

./: .gitignore  .golangci.yml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  go.mod  go.sum  skills-lock.json  test_exec_options.js
.codebuddy/: settings.json
.github/workflows/: benchmark.yml  coverage.yml  test.yml
.trae/rules/: project_rules.md  wiki-editor.md
cmd/: main.go
cmd/chopsticks/: main.go
cmd/cli/: app.go  autoremove.go  bucket.go  bucket_test.go  cache.go  check.go  cleanup_runtime.go  completion.go  config.go  config_test.go  conflict.go  conflict_test.go  deps.go  install.go  install_async.go  install_test.go  list.go  list_test.go  migrate.go  migrate_test.go  perf.go  root.go  root_test.go  search.go  search_async.go  search_test.go  uninstall.go  uninstall_test.go  update.go  update_async.go  update_test.go
core/app/: app.go  app_test.go  check.go  check_test.go  dependency.go  dependency_test.go  install.go  installer.go  layered_installer.go  layered_installer_test.go  manager.go  manager_test.go  pipeline.go  uninstaller.go  uninstaller_test.go  updater.go  updater_test.go
core/bucket/: bucket.go  bucket_test.go  loader.go  parallel_search.go  updater.go  (+1 more)
docs/: js-plugin-system.md  quick-using.md
engine/: engine.go  engine_test.go  js.go  js_batch.go  js_engine.go  js_pool.go  js_pool_test.go  lua.go  lua_engine.go  script.go  script_cache.go  script_executor.go
src/: http.rs  main.rs
wiki/: .version-checklist.md  ARCHITECTURE.md  CHANGELOG.md  README.md  RELATION.md  ROADMAP.md  consistency-report.md
(+164 files in other folders)
