[package]
name = "chopsticks"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = "0.10.0"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
sha2 = "0.10.8"
md5 = { version = "0.7.0", features = ["std"] }
regex = "1.10.5"
serde = "1.0.203"
serde_json = "1.0.118"
